add missing supervisor mail option

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -82,6 +82,7 @@ zope-conf-additional =
 [supervisor-settings]
 user = admin
 password = admin
+mail = root@localhost
 
 # Plone sites - used in VirtualHost configuration
 
