added moai default port and listen address

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -116,6 +116,7 @@ syslog = 127.0.0.1
 solr = 127.0.0.1
 queue = 127.0.0.1
 sesame = 127.0.0.1
+moai = 127.0.0.1
 
 # Ports for various servers. 'main' is for the public hostname
 
@@ -145,6 +146,7 @@ xdv = 5000
 solr = 8982
 sesame = 8982
 queue = 5672
+moai = 8180
 
 
 # OS users to drop to for various processes
