--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -49,6 +49,7 @@ auto-checkout =
     collective.z3cform.mapwidget
     dexterity.membrane
     plone.formwidget.autocomplete
+    collective.js.uix.multiselect
 
 
 [test]
