Automatically create the bccvl site during buildout

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -87,7 +87,7 @@ mail = root@localhost
 # Plone sites - used in VirtualHost configuration
 
 [plone-sites]
-main = ccaih
+main = bccvl
 
 [mq-settings]
 user = guest
