--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -35,7 +35,7 @@ versions = versions
 #varnish = http://repo.varnish-cache.org/source/varnish-3.0.3.tar.gz
 varnish = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
 haproxy = http://haproxy.1wt.eu/download/1.4/src/haproxy-1.4.22.tar.gz
-libpcre = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.31.tar.bz2
+libpcre = http://ftp.cs.stanford.edu/pub/exim/pcre/pcre-8.31.tar.bz2
 
 # Default settings for ZEO clients.
 [instance-settings]
