--- a/buildout.d/apache.conf.in
+++ b/buildout.d/apache.conf.in
@@ -33,8 +33,8 @@
 </VirtualHost>
 
 <VirtualHost *:443>
- SSLCertificateFile /etc/apache2/ssl/apache.crt
- SSLCertificateKeyFile /etc/apache2/ssl/apache.key
+    SSLCertificateFile ${site:certfile}
+    SSLCertificateKeyFile ${site:keyfile}
 
     ServerName ${site:hostname}
     ServerAdmin eresearch-services@griffith.edu.au
