--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -98,6 +98,8 @@ password = guest
 [site]
 hostname = www.bccvl.org.au
 schemahost = ns.bccvl.org.au
+certfile = /etc/pki/tls/certs/localhost.crt
+keyfile = /etc/pki/tls/private/localhost.key
 
 [hosts]
 main = 127.0.0.1
