--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -19,6 +19,7 @@ extends =
 
 find-links += http://dist.plone.org/thirdparty/
 
+always-checkout = true
 newest = false
 unzip = true
 versions = versions
