Move always-checkout setting to development and staging config that use mr.developer extension

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -19,6 +19,8 @@ parts =
     test-coverage-report
     omelette
 
+always-checkout = true
+
 auto-checkout =
     org.bccvl.site
     gu.repository.content
