Fixed supervisor program stanza for instance-debug

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -71,7 +71,7 @@ programs =
     20 instance2 ${buildout:bin-directory}/instance2 [console] true ${users:zope}
     20 instance3 ${buildout:bin-directory}/instance3 [console] true ${users:zope}
     20 instance4 ${buildout:bin-directory}/instance4 [console] true ${users:zope}
-    20 instance-debug (autostart=false) ${buildout:bin-directory}/instance4 [console] true ${users:zope}
+    20 instance-debug (autostart=false) ${buildout:bin-directory}/instance-debug [console] true ${users:zope}
     30 balancer  ${buildout:bin-directory}/haproxy  [-f ${buildout:directory}/etc/haproxy.conf -db] true ${users:balancer}
     50 cache     (autorestart=unexpected startretries=50) ${buildout:bin-directory}/cache     true ${users:cache}
 eventlisteners =
