Use my fork of rdflib-zodb.git with fixed .gitignore temporarily

--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -13,7 +13,7 @@ collective.quickupload = git git://github.com/collective/collective.quickupload.
 collective.z3cform.colorpicker = git git://github.com/gborelli/collective.z3cform.colorpicker.git
 collective.z3cform.mapwidget = git git://github.com/collective/collective.z3cform.mapwidget.git
 ordf = hg https://bitbucket.org/gweis/ordf
-rdflib-zodb = git git://github.com/gweis/rdflib-zodb.git branch=rdflib3
+rdflib-zodb = git git://github.com/therealprologic/rdflib-zodb.git branch=rdflib3
 plone.app.folderui = git http://subsoft.rcs.griffith.edu.au/git/plone.app.folderui branch=localdev
 gu.z3cform.rdf = git http://subsoft.rcs.griffith.edu.au/git/gu.z3cform.rdf
 collective.googleanalytics = git git://github.com/collective/collective.googleanalytics.git
