Updated .hgignore to exclude a bunch of stuff built by builtoud

--- a/.hgignore
+++ b/.hgignore
@@ -1,3 +1,15 @@
 syntax: glob
 
+bin
+etc
+src
+var
 .git
+eggs
+parts
+develop-eggs
+bin/buildout
+buildout.cfg
+.installed.cfg
+.mr.developer.cfg
+picked-versions.cfg
