Added plonesite to programatically create the bccvl site during buildout

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -86,6 +86,13 @@ mail = root@localhost
 
 # Plone sites - used in VirtualHost configuration
 
+[plonesite]
+recipe = collective.recipe.plonesite
+site-id = bccvl
+profiles = org.bccvl.site:default
+instance = instance1
+zeoserver = zeoserver
+
 [plone-sites]
 main = bccvl
 
