added basic plone.app.async configuration

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -45,6 +45,7 @@ eggs =
     Products.ZSQLMethods # currently required by Products.CMFCore
     roman # temporary bypass for https://bugs.launchpad.net/zope2/+bug/539181    Plone
     org.bccvl.site # our policy package... should pull in any other dependencies
+    plone.app.async
 zcml =
 products =
 user = admin:admin
@@ -58,7 +59,13 @@ blob-storage = ${zeoserver:blob-storage}
 zeo-address = ${hosts:zeoserver}:${ports:zeoserver}
 effective-user = ${users:zope}
 extra-paths = ${buildout:parts-directory}/site-packages
+zcml-additional = 
+    <include package="plone.app.async" file="single_db_instance.zcml" />
+#environment-vars = ${buildout:directory}/var/i${:_buildout_section_name_}-uuid.txt
 zope-conf-additional =
+#    <product-config zc.z3monitor>
+#        port ${ports:monitor}
+#    </product-config>
 #    <product-config affinitic.zamqp>
 #        conn1 ${plone-sites:main}@ausncbroker
 #    </product-config>
@@ -70,12 +77,15 @@ zope-conf-additional =
 #    </product-config>
 #
 #    trusted-proxy ${site:hostname}
-
-
 # zope-conf-additional =
 #     <product-config affinitic.zamqp>
 #         ${:_buildout_section_name_} ${plone-sites:main}@queueService
 #     </product-config>
+
+[worker-settings]
+<= instance-settings
+zcml-additional = 
+    <include package="plone.app.async" file="single_db_worker.zcml" />
 
 # Default settings for supervisor
 
@@ -118,7 +128,12 @@ instance1 = 127.0.0.1
 instance2 = 127.0.0.1
 instance3 = 127.0.0.1
 instance4 = 127.0.0.1
-instance-debug = 0.0.0.0
+instance-debug = 127.0.0.1
+worker1 = 127.0.0.1
+worker2 = 127.0.0.1
+worker3 = 127.0.0.1
+worker4 = 127.0.0.1
+worker-debug = 127.0.0.1
 zeoserver = 127.0.0.1
 xdv = 127.0.0.1
 syslog = 127.0.0.1
@@ -148,6 +163,11 @@ instance3-icp = 8403
 instance4-icp = 8404
 instance-debug = 8499
 instance-debug-dav = 8489
+worker1 = 8601
+worker2 = 8602
+worker3 = 8603
+worker4 = 8604
+worker-debug = 8699
 zeoserver = 8501
 zeomonitor = 8502
 supervisor = 9001
