--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -46,6 +46,33 @@ recipe = plone.recipe.zope2instance
 http-address = ${hosts:instance4}:${ports:instance4}
 webdav-address = ${hosts:instance4}:${ports:instance4-dav}
 
+[worker-debug]
+recipe = plone.recipe.zope2instance
+<= worker-settings
+http-address = ${hosts:worker-debug}:${ports:worker-debug}
+debug-mode = on
+verbose-security = on
+
+[worker1]
+recipe = plone.recipe.zope2instance
+<= worker-settings
+http-address = ${host:worker1}:${ports:worker1}
+
+[worker2]
+recipe = plone.recipe.zope2instance
+<= worker-settings
+http-address = ${host:worker2}:${ports:worker2}
+
+[worker3]
+recipe = plone.recipe.zope2instance
+<= worker-settings
+http-address = ${host:worker3}:${ports:worker3}
+
+[worker4]
+recipe = plone.recipe.zope2instance
+<= worker-settings
+http-address = ${host:worker4}:${ports:worker4}
+
 ##############################################################################
 # special handling for C-Extensions
 ##############################################################################
@@ -73,6 +100,10 @@ programs =
     20 instance4 ${buildout:bin-directory}/instance4 [console] true ${users:zope}
     20 instance-debug (autostart=false) ${buildout:bin-directory}/instance-debug [console] true ${users:zope}
     30 balancer  ${buildout:bin-directory}/haproxy  [-f ${buildout:directory}/etc/haproxy.conf -db] true ${users:balancer}
+    20 worker1   ${buildout:bin-directory}/worker1 [console] true ${users:zope}
+    20 worker2   ${buildout:bin-directory}/worker2 [console] true ${users:zope}
+    20 worker3   ${buildout:bin-directory}/worker3 [console] true ${users:zope}
+    20 worker4   ${buildout:bin-directory}/worker4 [console] true ${users:zope}
     50 cache     (autorestart=unexpected startretries=50) ${buildout:bin-directory}/cache     true ${users:cache}
 eventlisteners =
     crashmail PROCESS_STATE ${buildout:bin-directory}/crashmail [-p cache -m "${supervisor-settings:mail}"]
