added org.bccvl.theme repository to list of mr.developer managed sources

--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -1,6 +1,7 @@
 
 [sources]
 org.bccvl.site = git git://github.com/BCCVL/org.bccvl.site.git
+org.bccvl.theme = git git://github.com/BCCVL/org.bccvl.theme.git
 gu.repository.content = git http://subsoft.rcs.griffith.edu.au/git/gu.repository.content.git
 gu.plone.rdf = git http://subsoft.rcs.griffith.edu.au/git/gu.plone.rdf.git
 collective.geo.contentlocations	= git git://github.com/collective/collective.geo.contentlocations.git
