--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -25,6 +25,7 @@ always-checkout = true
 
 auto-checkout =
     org.bccvl.site
+    org.bccvl.theme
     gu.repository.content
     gu.plone.rdf
     gu.z3cform.rdf
