set unique instance uuid for zc.async

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -61,7 +61,8 @@ effective-user = ${users:zope}
 extra-paths = ${buildout:parts-directory}/site-packages
 zcml-additional = 
     <include package="plone.app.async" file="single_db_instance.zcml" />
-#environment-vars = ${buildout:directory}/var/i${:_buildout_section_name_}-uuid.txt
+environment-vars = 
+    ZC_ASYNC_UUID ${buildout:directory}/var/i${:_buildout_section_name_}-uuid.txt
 zope-conf-additional =
 #    <product-config zc.z3monitor>
 #        port ${ports:monitor}
