--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -17,6 +17,11 @@ parts =
     instance2
     instance3
     instance4
+    worker-debug
+    worker1
+    worker2
+    worker3
+    worker4
     plonesite
     backup
     test
@@ -33,6 +38,7 @@ always-checkout = true
 
 auto-checkout =
     org.bccvl.site
+    org.bccvl.theme
     gu.repository.content
     gu.plone.rdf
     gu.z3cform.rdf
