reference correct hosts section

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -56,22 +56,22 @@ verbose-security = on
 [worker1]
 recipe = plone.recipe.zope2instance
 <= worker-settings
-http-address = ${host:worker1}:${ports:worker1}
+http-address = ${hosts:worker1}:${ports:worker1}
 
 [worker2]
 recipe = plone.recipe.zope2instance
 <= worker-settings
-http-address = ${host:worker2}:${ports:worker2}
+http-address = ${hosts:worker2}:${ports:worker2}
 
 [worker3]
 recipe = plone.recipe.zope2instance
 <= worker-settings
-http-address = ${host:worker3}:${ports:worker3}
+http-address = ${hosts:worker3}:${ports:worker3}
 
 [worker4]
 recipe = plone.recipe.zope2instance
 <= worker-settings
-http-address = ${host:worker4}:${ports:worker4}
+http-address = ${hosts:worker4}:${ports:worker4}
 
 ##############################################################################
 # special handling for C-Extensions
