configure ordf via buildout

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -64,6 +64,10 @@ zcml-additional =
 environment-vars = 
     ZC_ASYNC_UUID ${buildout:directory}/var/i${:_buildout_section_name_}-uuid.txt
 zope-conf-additional =
+    <product-config gu.plone.rdf>
+        inifile ${ordf-conf:output}
+        baseuri ${rdf-settings:baseuri}
+    </product-config>
 #    <product-config zc.z3monitor>
 #        port ${ports:monitor}
 #    </product-config>
@@ -89,6 +93,12 @@ zcml-additional =
     <include package="plone.app.async" file="single_db_worker.zcml" />
 
 # Default settings for supervisor
+
+[rdf-settings]
+storeurl = http://localhost:6801/
+baseuri = http://${site:hostname}/individual/
+# baseuri has to end with / or #
+
 
 [supervisor-settings]
 user = admin
