--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -194,6 +194,15 @@ input = ${buildout:directory}/buildout.d/apache.conf.in
 output = ${buildout:directory}/etc/apache.conf
 
 ##############################################################################
+# ORDF configuration
+##############################################################################
+
+[ordf-conf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/buildout.d/ordf.ini.in
+output = ${buildout:directory}/etc/ordf.ini
+
+##############################################################################
 # Solr configuration
 ##############################################################################
 [solr-download]
