added org.bccvl.compute and org.bccvl.testsetup to buildout

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -27,6 +27,8 @@ always-checkout = true
 auto-checkout =
     org.bccvl.site
     org.bccvl.theme
+    org.bccvl.testsetup
+    org.bccvl.compute
     gu.repository.content
     gu.plone.rdf
     gu.z3cform.rdf
@@ -46,7 +48,7 @@ auto-checkout =
     dexterity.membrane
     plone.formwidget.autocomplete
     collective.js.uix.multiselect
-    
+
 [test]
 eggs =
     org.bccvl.site [test]
@@ -59,4 +61,7 @@ locales = ${buildout:directory}/locales
 eggs +=
     plone.app.debugtoolbar
     plone.reload
+    org.bccvl.testsetup
+    org.bccvl.compute
+
 debug-mode = True
