--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -2,6 +2,8 @@
 [sources]
 org.bccvl.site = git git://github.com/BCCVL/org.bccvl.site.git
 org.bccvl.theme = git git://github.com/BCCVL/org.bccvl.theme.git
+org.bccvl.testsetup = git git://github.com/BCCVL/org.bccvl.testsetup.git
+org.bccvl.compute = git git://github.com/BCCVL/org.bccvl.compute.git
 gu.repository.content = git http://subsoft.rcs.griffith.edu.au/git/gu.repository.content.git
 gu.plone.rdf = git http://subsoft.rcs.griffith.edu.au/git/gu.plone.rdf.git
 collective.geo.contentlocations	= git git://github.com/collective/collective.geo.contentlocations.git
