--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -40,6 +40,8 @@ always-checkout = true
 auto-checkout =
     org.bccvl.site
     org.bccvl.theme
+    org.bccvl.testsetup
+    org.bccvl.compute
     gu.repository.content
     gu.plone.rdf
     gu.z3cform.rdf
@@ -59,6 +61,11 @@ auto-checkout =
     dexterity.membrane
     plone.formwidget.autocomplete
     collective.js.uix.multiselect
+
+[instance-settings]
+eggs +=
+    org.bccvl.testsetup
+    org.bccvl.compute
 
 
 [test]
