move plonesite recipe to build.cfg

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -73,6 +73,13 @@ recipe = plone.recipe.zope2instance
 <= worker-settings
 http-address = ${hosts:worker4}:${ports:worker4}
 
+[plonesite]
+recipe = collective.recipe.plonesite
+site-id = ${plone-sites:main}
+profiles = org.bccvl.site:default
+instance = instance1
+zeoserver = zeoserver
+
 ##############################################################################
 # special handling for C-Extensions
 ##############################################################################
