set WORKER_DIR env var  in worker instances

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -59,10 +59,10 @@ blob-storage = ${zeoserver:blob-storage}
 zeo-address = ${hosts:zeoserver}:${ports:zeoserver}
 effective-user = ${users:zope}
 extra-paths = ${buildout:parts-directory}/site-packages
-zcml-additional = 
+zcml-additional =
     <include package="plone.app.async" file="single_db_instance.zcml" />
-environment-vars = 
-    ZC_ASYNC_UUID ${buildout:directory}/var/i${:_buildout_section_name_}-uuid.txt
+environment-vars =
+    ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
 zope-conf-additional =
     <product-config gu.plone.rdf>
         inifile ${ordf-conf:output}
@@ -89,8 +89,10 @@ zope-conf-additional =
 
 [worker-settings]
 <= instance-settings
-zcml-additional = 
+zcml-additional =
     <include package="plone.app.async" file="single_db_worker.zcml" />
+environment-vars +=
+    WORKER_DIR ${site:workdir}
 
 # Default settings for supervisor
 
@@ -120,6 +122,7 @@ hostname = www.bccvl.org.au
 schemahost = ns.bccvl.org.au
 certfile = /etc/pki/tls/certs/localhost.crt
 keyfile = /etc/pki/tls/private/localhost.key
+workdir = /mnt/work
 
 [hosts]
 main = 127.0.0.1
