correctly set environment-vars for workers

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -91,7 +91,8 @@ zope-conf-additional =
 <= instance-settings
 zcml-additional =
     <include package="plone.app.async" file="single_db_worker.zcml" />
-environment-vars +=
+environment-vars =
+    ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
     WORKER_DIR ${site:workdir}
 
 # Default settings for supervisor
