Applied same fix as for terranova - Fixing plone default content creation when site is created

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -76,7 +76,10 @@ http-address = ${hosts:worker4}:${ports:worker4}
 [plonesite]
 recipe = collective.recipe.plonesite
 site-id = ${plone-sites:main}
-profiles = org.bccvl.site:default
+# Create default plone content like News, Events...
+profiles-initial =
+    Products.CMFPlone:plone-content
+    org.bccvl.site:default
 instance = instance1
 zeoserver = zeoserver
 
