turn off debugging, upgrade plone.app.collection

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -18,7 +18,7 @@ effective-user = ${users:zope}
 recipe = plone.recipe.zope2instance
 <= instance-settings
 http-address = ${hosts:instance-debug}:${ports:instance-debug}
-webdav-address = ${hosts:instance-debug}:${ports:instance-debug-dav}
+#webdav-address = ${hosts:instance-debug}:${ports:instance-debug-dav}
 debug-mode = on
 verbose-security = on
 
@@ -26,25 +26,25 @@ verbose-security = on
 recipe = plone.recipe.zope2instance
 <= instance-settings
 http-address = ${hosts:instance1}:${ports:instance1}
-webdav-address = ${hosts:instance1}:${ports:instance1-dav}
+#webdav-address = ${hosts:instance1}:${ports:instance1-dav}
 
 [instance2]
 recipe = plone.recipe.zope2instance
 <= instance-settings
 http-address = ${hosts:instance2}:${ports:instance2}
-webdav-address = ${hosts:instance2}:${ports:instance2-dav}
+#webdav-address = ${hosts:instance2}:${ports:instance2-dav}
 
 [instance3]
 recipe = plone.recipe.zope2instance
 <= instance-settings
 http-address = ${hosts:instance3}:${ports:instance3}
-webdav-address = ${hosts:instance3}:${ports:instance3-dav}
+#webdav-address = ${hosts:instance3}:${ports:instance3-dav}
 
 [instance4]
 recipe = plone.recipe.zope2instance
 <= instance-settings
 http-address = ${hosts:instance4}:${ports:instance4}
-webdav-address = ${hosts:instance4}:${ports:instance4-dav}
+#webdav-address = ${hosts:instance4}:${ports:instance4-dav}
 
 [worker-debug]
 recipe = plone.recipe.zope2instance
