--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -77,8 +77,11 @@ http-address = ${hosts:worker4}:${ports:worker4}
 recipe = collective.recipe.plonesite
 site-id = ${plone-sites:main}
 # Create default plone content like News, Events...
+# profiles-initial =
+#     Products.CMFPlone:plone-content
+#     org.bccvl.site:default
 profiles-initial =
-    Products.CMFPlone:plone-content
+    plone.app.contenttypes:plone-content
     org.bccvl.site:default
 instance = instance1
 zeoserver = zeoserver
