use debug instance to initialise site

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -83,7 +83,7 @@ site-id = ${plone-sites:main}
 profiles-initial =
     plone.app.contenttypes:plone-content
     org.bccvl.site:default
-instance = instance1
+instance = instance-debug
 zeoserver = zeoserver
 
 ##############################################################################
