use released plone.formwidget.autocomplete make root urls for sources configurable

--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -1,25 +1,48 @@
+[remotes]
+# (Repository locations)
+########################
+
+# Collective
+collective = git://github.com/collective
+collective_push = git@github.com:collective
+
+# BCCVL
+bccvl = git://github.com/BCCVL
+bccvl_push = git@github.com:BCCVL
+
+# Subsoft
+subsoft = http://subsoft.rcs.griffith.edu.au/git
+subsoft_push = gitolite@subsoft.rcs.griffith.edu.au
+
+# eresearch github
+ersgh = git://github.com/gu-eresearch
+ersgh_push = git@github.com:gu-eresearch
+
+# rdflib
+rdflib = git://github.com/RDFLib
+rdflib_push = git@github.com:RDFLib
+
 
 [sources]
-org.bccvl.site = git git://github.com/BCCVL/org.bccvl.site.git
-org.bccvl.theme = git git://github.com/BCCVL/org.bccvl.theme.git
-org.bccvl.testsetup = git git://github.com/BCCVL/org.bccvl.testsetup.git
-org.bccvl.compute = git git://github.com/BCCVL/org.bccvl.compute.git
-gu.repository.content = git http://subsoft.rcs.griffith.edu.au/git/gu.repository.content.git
-gu.plone.rdf = git http://subsoft.rcs.griffith.edu.au/git/gu.plone.rdf.git
-collective.geo.contentlocations	= git git://github.com/collective/collective.geo.contentlocations.git
-collective.geo.geographer = git git://github.com/collective/collective.geo.geographer.git
-collective.geo.kml = git git://github.com/collective/collective.geo.kml.git
-collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwidget.git
-collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers.git
-collective.geo.settings = git git://github.com/collective/collective.geo.settings.git
-collective.quickupload = git git://github.com/collective/collective.quickupload.git
-collective.z3cform.colorpicker = git git://github.com/gborelli/collective.z3cform.colorpicker.git
-collective.z3cform.mapwidget = git git://github.com/collective/collective.z3cform.mapwidget.git
+org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git
+org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git
+org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git
+org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git
+gu.repository.content = git ${remotes:subsoft}/gu.repository.content.git pushurl=${remotes:subsoft_push}:gu.repository.content.git
+gu.plone.rdf = git ${remotes:subsoft}/gu.plone.rdf.git pushurl=${remotes:subsoft_push}:gu.plone.rdf.git
+collective.geo.contentlocations	= git ${remotes:collective}/collective.geo.contentlocations.git pushurl=${remotes:collective_push}/collective.geo.contentlocations.git
+collective.geo.geographer = git ${remotes:collective}/collective.geo.geographer.git pushurl=${remotes:collective_push}/collective.geo.geographer.git
+collective.geo.kml = git ${remotes:collective}/collective.geo.kml.git pushurl=${remotes:collective_push}/collective.geo.kml.git
+collective.geo.mapwidget = git ${remotes:collective}/collective.geo.mapwidget.git pushurl=${remotes:collective_push}/collective.geo.mapwidget.git
+collective.geo.openlayers = git ${remotes:collective}/collective.geo.openlayers.git pushurl=${remotes:collective_push}/collective.geo.openlayers.git
+collective.geo.settings = git ${remotes:collective}/collective.geo.settings.git pushurl=${remotes:collective_push}/collective.geo.settings.git
+collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git
+collective.z3cform.colorpicker = git ${remotes:collective}/collective.z3cform.colorpicker.git pushurl=${remotes:collective_push}/collective.z3cform.colorpicker.git
+collective.z3cform.mapwidget = git ${remotes:collective}/collective.z3cform.mapwidget.git pushurl=${remotes:collective_push}/collective.z3cform.mapwidget.git
+rdflib-zodb = git ${remotes:rdflib}/rdflib-zodb.git pushurl=${remotes:rdflib_push}/rdflib-zodb.git rev=rdflib3
+plone.app.folderui = git ${remotes:subsoft}/plone.app.folderui pushurl=${remotes:subsoft_push}:plone.app.folderui branch=localdev
+gu.z3cform.rdf = git ${remotes:subsoft}/gu.z3cform.rdf pushurl=${remotes:subsoft_push}:gu.z3cform.rdf
+collective.googleanalytics = git ${remotes:collective}/collective.googleanalytics.git pushurl=${remotes:collective_push}/collective.googleanalytics.git
+dexterity.membrane = git ${remotes:collective}/dexterity.membrane.git pushurl=${remotes:collective_push}/dexterity.membrane.git
+collective.js.uix.multiselect = git ${remotes:ersgh}/collective.js.uix.multiselect.git pushurl=${remotes:ersgh_push}/collective.js.uix.multiselect.git
 ordf = hg https://bitbucket.org/gweis/ordf
-rdflib-zodb = git git://github.com/therealprologic/rdflib-zodb.git branch=rdflib3
-plone.app.folderui = git http://subsoft.rcs.griffith.edu.au/git/plone.app.folderui branch=localdev
-gu.z3cform.rdf = git http://subsoft.rcs.griffith.edu.au/git/gu.z3cform.rdf
-collective.googleanalytics = git git://github.com/collective/collective.googleanalytics.git
-dexterity.membrane = git git://github.com/collective/dexterity.membrane.git
-plone.formwidget.autocomplete = git git://github.com/plone/plone.formwidget.autocomplete.git branch=jqueryui-autocomplete
-collective.js.uix.multiselect = git git://github.com/gu-eresearch/collective.js.uix.multiselect.git
