- added experimental plone products as optional buildout include - updated development example - added a few development tools to default development buildout

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -57,10 +57,15 @@ eggs =
 # as http://localhost:8080/Plone/++theme++my.project/logo.png
 resources = ${buildout:directory}/resources
 locales = ${buildout:directory}/locales
+debug-mode = True
 eggs +=
-    plone.app.debugtoolbar
-    plone.reload
     org.bccvl.testsetup
     org.bccvl.compute
-
-debug-mode = True
+    plone.app.debugtoolbar
+    Products.Clouseau
+    Products.DocFinderTab
+    Products.PDBDebugMode
+    Products.PrintingMailHost
+    plone.reload
+    zptlint
+    ipdb
