fix list of eggs for test runner

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -24,7 +24,7 @@ parts =
 
 always-checkout = true
 
-auto-checkout =
+auto-checkout +=
     org.bccvl.site
     org.bccvl.theme
     org.bccvl.testsetup
@@ -49,8 +49,9 @@ auto-checkout =
     collective.js.uix.multiselect
 
 [test]
-eggs =
+eggs +=
     org.bccvl.site [test]
+defaults = ['--auto-color', '--auto-progress', '-m', 'org.bccvl.site']
 
 [instance-settings]
 # access local theme resurces at ${buildout:directory}/resources/theme/my.project/logo.png
