--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -6,6 +6,10 @@
 collective = git://github.com/collective
 collective_push = git@github.com:collective
 
+# Plone
+plone = git://github.com/plone
+plone_push = git@github.com:plone
+
 # BCCVL
 bccvl = git://github.com/BCCVL
 bccvl_push = git@github.com:BCCVL
