upgrade rdflib and rdflib-zodb to latest version (makes testing easier) THIS will be incompatible with previous releases,Site rebuild necessary

--- a/buildout.d/staging.cfg
+++ b/buildout.d/staging.cfg
@@ -42,6 +42,7 @@ auto-checkout =
     gu.plone.rdf
     gu.z3cform.rdf
     ordf
+    rdflib
     rdflib-zodb
     plone.app.folderui
     collective.geo.contentlocations
