--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -43,10 +43,11 @@ collective.geo.settings = git ${remotes:collective}/collective.geo.settings.git 
 collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git
 collective.z3cform.colorpicker = git ${remotes:collective}/collective.z3cform.colorpicker.git pushurl=${remotes:collective_push}/collective.z3cform.colorpicker.git
 collective.z3cform.mapwidget = git ${remotes:collective}/collective.z3cform.mapwidget.git pushurl=${remotes:collective_push}/collective.z3cform.mapwidget.git
-rdflib-zodb = git ${remotes:rdflib}/rdflib-zodb.git pushurl=${remotes:rdflib_push}/rdflib-zodb.git rev=rdflib3
+rdflib-zodb = git ${remotes:rdflib}/rdflib-zodb.git pushurl=${remotes:rdflib_push}/rdflib-zodb.git
 plone.app.folderui = git ${remotes:subsoft}/plone.app.folderui pushurl=${remotes:subsoft_push}:plone.app.folderui branch=localdev
 gu.z3cform.rdf = git ${remotes:subsoft}/gu.z3cform.rdf pushurl=${remotes:subsoft_push}:gu.z3cform.rdf
 collective.googleanalytics = git ${remotes:collective}/collective.googleanalytics.git pushurl=${remotes:collective_push}/collective.googleanalytics.git
 dexterity.membrane = git ${remotes:collective}/dexterity.membrane.git pushurl=${remotes:collective_push}/dexterity.membrane.git
 collective.js.uix.multiselect = git ${remotes:ersgh}/collective.js.uix.multiselect.git pushurl=${remotes:ersgh_push}/collective.js.uix.multiselect.git
 ordf = hg https://bitbucket.org/gweis/ordf
+rdflib = git ${remotes:rdflib}/rdflib push_url=${remotes:rdflib_push}/rdflib
