Add visualiser to hosts/ports. Add visualiser to apache.conf

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -148,6 +148,7 @@ solr = 127.0.0.1
 queue = 127.0.0.1
 sesame = 127.0.0.1
 moai = 127.0.0.1
+visualiser = 127.0.0.1
 
 # Ports for various servers. 'main' is for the public hostname
 
@@ -183,6 +184,7 @@ solr = 8982
 sesame = 8982
 queue = 5672
 moai = 8180
+visualiser = 10600
 
 
 # OS users to drop to for various processes
