--- a/buildout.d/apache.conf.in
+++ b/buildout.d/apache.conf.in
@@ -25,10 +25,16 @@
     RequestHeader set SHIB_PERSON_COMMONNAME %{displayName}e
     RequestHeader set SHIB_INETORGPERSON_MAIL %{mail}e
     # TODO add rewrites for supervisord and haproxy
-    RewriteCond %{REQUEST_URI} !^/(oai)
+    RewriteCond %{REQUEST_URI} !((^/(oai))|(^/(_visualiser)))
     RewriteRule ^/(.*)$ http://${hosts:cache}:${ports:cache}/VirtualHostBase/http/%{SERVER_NAME}:80/${plone-sites:main}/VirtualHostRoot/$1 [L,P]
     # Rewrite to access oai
     RewriteRule ^/oai(.*)$ http://${hosts:moai}:${ports:moai}/oai$1 [L,P]
+    # Rewrite to access visualiser
+    RewriteRule ^/_visualiser/(.*)$ http://${hosts:visualiser}:${ports:visualiser}/$1 [L,P]
+
+    <Location /_visualiser>
+        ProxyPassReverse http://${hosts:visualiser}:${ports:visualiser}
+    </Location>
 
 </VirtualHost>
 
@@ -104,6 +110,8 @@
     RewriteRule ^/_queue/(.*)$ http://${hosts:queue}:${ports:queue}/$1 [L,P]
     # Allow access to solr
     RewriteRule ^/solr/(.*)$ ajp://localhost:8009/solr/$1 [L,P]
+    # Rewrite to access visualiser
+    RewriteRule ^/_visualiser/(.*)$ http://${hosts:visualiser}:${ports:visualiser}/$1 [L,P]
     # Let Shibboleth, server status,  pass through normally
     RewriteCond %{REQUEST_URI} !^/(shibboleth-sp|Shibboleth.sso|server-(status|info))
     # and proxy everything else to our Virtulahost in Zope
@@ -182,5 +190,9 @@
         #Require shibboleth
         ProxyPassReverse ajp://localhost:8009/
     </LocationMatch>
+
+    <Location /_visualiser>
+        ProxyPassReverse http://${hosts:visualiser}:${ports:visualiser}
+    </Location>
 
 </VirtualHost>
