--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -9,4 +9,6 @@ plone.app.jquery = 1.8.3
 rdflib = 4.1-dev
 Jinja2 = 2.7.1
 
+# pin collective.transmogrifier to a version < 1.5 as currently
+# quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
