add robot part to buildout

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -358,6 +358,12 @@ eggs = z3c.coverage
 scripts = coverage=test-coverage-report
 arguments = ('coverage', 'report')
 
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    ${instance-settings:eggs}
+    plone.app.robotframework[ride]
+
 ##############################################################################
 # Jenkins test stuff
 ##############################################################################
