make theme test dependencies available in test runner

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -53,6 +53,7 @@ auto-checkout +=
 [test]
 eggs +=
     org.bccvl.site [test]
+    org.bccvl.theme [test]
 defaults = ['--auto-color', '--auto-progress', '-m', 'org.bccvl.site']
 
 [instance-settings]
