add jenkins test runner to development.cfg

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -1,7 +1,6 @@
 
 [zopepy]
 recipe = zc.recipe.egg
-#recipe = z3c.recipe.scripts:interpreter
 eggs = ${instance-settings:eggs}
 extra-paths = ${instance-settings:extra-paths}
 interpreter = zopepy
@@ -425,6 +424,5 @@ coverage = ${coverage:bin-directory}/coverage
 jenkins-test = ${jenkins-test:bin-directory}/jenkins-test
 
 [coverage]
-recipe = z3c.recipe.egg
-#recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs = coverage
