--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -20,6 +20,8 @@ parts =
     test
     test-coverage
     test-coverage-report
+    jenkins-test
+    jenkins-test-coverage
     omelette
     robot
 
@@ -54,7 +56,32 @@ auto-checkout +=
 eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
-defaults = ['--auto-color', '--auto-progress', '-m', 'org.bccvl.site']
+    gu.plone.rdf [test]
+    gu.repository.content [test]
+    gu.z3cform.rdf [test]
+defaults = ['--auto-color', '--auto-progress',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+           ]
+
+[jenkins-test]
+defaults = ['--auto-color', '--auto-progress', '--xml',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+           ]
+eggs +=
+    org.bccvl.site [test]
+    org.bccvl.theme [test]
+    gu.plone.rdf [test]
+    gu.repository.content [test]
+    gu.z3cform.rdf [test]
+
 
 [instance-settings]
 # access local theme resurces at ${buildout:directory}/resources/theme/my.project/logo.png
