--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -66,7 +66,7 @@ eggs +=
     plone.app.debugtoolbar
     Products.Clouseau
     Products.DocFinderTab
-    Products.PDBDebugMode
+#    Products.PDBDebugMode
     Products.PrintingMailHost
     plone.reload
     zptlint
