--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -12,3 +12,6 @@ Jinja2 = 2.7.1
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
 collective.transmogrifier = 1.4
+
+
+zc.queue = 1.3
