--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -149,6 +149,7 @@ queue = 127.0.0.1
 sesame = 127.0.0.1
 moai = 127.0.0.1
 visualiser = 127.0.0.1
+data_mover = 127.0.0.1
 
 # Ports for various servers. 'main' is for the public hostname
 
@@ -185,6 +186,7 @@ sesame = 8982
 queue = 5672
 moai = 8180
 visualiser = 10600
+data_mover = 10700
 
 
 # OS users to drop to for various processes
