execute compute tests per default

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -65,6 +65,7 @@ defaults = ['--auto-color', '--auto-progress',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
+            '-m', 'org.bccvl.compute',
            ]
 
 [jenkins-test]
@@ -74,6 +75,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'gu.repository.content',
             '-m', 'org.bccvl.site',
             '-m', 'org.bccvl.theme',
+            '-m', 'org.bccvl.compute',
            ]
 eggs +=
     org.bccvl.site [test]
