don't install plone initial content

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -80,7 +80,7 @@ site-id = ${plone-sites:main}
 #     Products.CMFPlone:plone-content
 #     org.bccvl.site:default
 profiles-initial =
-    plone.app.contenttypes:plone-content
+#    plone.app.contenttypes:plone-content
     org.bccvl.site:default
 instance = instance-debug
 zeoserver = zeoserver
