--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -121,6 +121,7 @@ password = guest
 [site]
 hostname = www.bccvl.org.au
 schemahost = ns.bccvl.org.au
+# TODO: this might be good to do in salt
 certfile = /etc/pki/tls/certs/localhost.crt
 keyfile = /etc/pki/tls/private/localhost.key
 workdir = /mnt/work
