don't show picked-versions on cli output

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -1,5 +1,5 @@
 [buildout]
-show-picked-versions = true
+#show-picked-versions = true
 # Dump the last successful picked versions to a file so that we can pin
 # those in production.cfg
 update-versions-file = picked-versions.cfg
