--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -68,6 +68,16 @@ defaults = ['--auto-color', '--auto-progress',
             '-m', 'org.bccvl.compute',
            ]
 
+[test-coverage]
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
+            '-m', 'gu.z3cform.rdf',
+            '-m', 'gu.plone.rdf',
+            '-m', 'gu.repository.content',
+            '-m', 'org.bccvl.site',
+            '-m', 'org.bccvl.theme',
+            '-m', 'org.bccvl.compute',
+           ]
+
 [jenkins-test]
 defaults = ['--auto-color', '--auto-progress', '--xml',
             '-m', 'gu.z3cform.rdf',
