--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -56,6 +56,7 @@ auto-checkout +=
 eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
+    org.bccvl.compute
     gu.plone.rdf [test]
     gu.repository.content [test]
     gu.z3cform.rdf [test]
@@ -111,4 +112,3 @@ eggs +=
     Products.PrintingMailHost
     plone.reload
     zptlint
-    ipdb
