--- a/buildout.d/varnish.vcl.in
+++ b/buildout.d/varnish.vcl.in
@@ -75,6 +75,11 @@ sub vcl_deliver {
     call rewrite_age;
 }
 
+sub vcl_pipe {
+    # http://www.varnish-cache.org/ticket/451
+    # This forces every pipe request to be the first one.
+    set bereq.http.connection = "close";
+}
 
 ##########################
 #  Helper Subroutines
