pin geopy to 0.95.1

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -8,6 +8,7 @@ plone.app.jquery = 1.8.3
 
 rdflib = 4.1-dev
 Jinja2 = 2.7.1
+geopy = 0.95.1
 
 # pin collective.transmogrifier to a version < 1.5 as currently
 # quintagroup.transmogrifier 0.5 requires collective.transmogrifier < 1.5
